--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-Readme.md
+### Maven ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.mvn/wrapper/maven-wrapper.properties
 
 ### STS ###
 .apt_generated
